Adiciona signup para permitir novos usuários via api
